--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emea-form",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ausdwoopweb01/EMEA_ReactApp/",
+  "homepage": ".",
   "dependencies": {
     "@hookform/resolvers": "^0.1.0",
     "@material-ui/core": "^4.11.4",
